--- a/css/galeria.css
+++ b/css/galeria.css
@@ -17,61 +17,10 @@ body {
     padding: 0;
 }
 
-/* Menu*/
-
-#encabezado {
-    position: relative;
-    top: 0;
-    width: 100%;
-    background-color: #30334b;
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 10px 20px;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    margin-left: 20px;
-    padding: 0;
-
-
-}
-
-nav ul li a {
-    text-decoration: none;
-    padding: 0.3em 0.5em;
-    display: block;
-    color: rgb(244, 241, 241);
-    font-family: Overpass;
-    font-size: 1.5em;
-}
-
-nav ul li a:hover {
-    color: #d939be;
-    transform: scale(1.25);
-}
-
 /*Galeria*/
 .contenido {
-    background-image: url(../IMG/tp238-background-03.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background: #001db0;
+    background: radial-gradient(circle, rgba(0, 29, 176, 1) 0%, rgba(222, 42, 78, 1) 100%);
 }
 
 .galeria {
@@ -111,19 +60,4 @@ nav ul li a:hover {
     padding: 5px;
     font-size: 1em;
     color: #ccc;
-}
-
-/*Footer*/
-footer {
-    /*position: fixed;*/
-    position: relative;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #042331;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 1s ease;
 }
