--- a/css/style.css
+++ b/css/style.css
@@ -8,41 +8,41 @@
 }
 
 body {
-  background: #0d0d0d; 
- 
+  background: #0d0d0d;
+
   color: #f6f6f6;
   font-family: 'Montserrat', sans-serif;
   line-height: 1.6;
 }
 
 .inicio {
-    background-color: #0d0d0d; 
-    color: #ffffff;
-    min-height: 100vh;        
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  background-color: #0d0d0d;
+  color: #ffffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
 /* --- CAROUSEL --- */
 
 .titulo-seccion {
-    text-align: center;
-    padding: 30px 20px;
-    background-color: #ffffff00;
+  text-align: center;
+  padding: 30px 20px;
+  background-color: #ffffff00;
 }
 
 .titulo-seccion h2 {
-    font-family: Unbounded;
-    font-size: 2.5em;
-    color: #e53bba;
-    margin-bottom: 10px;
+  font-family: Unbounded;
+  font-size: 2.5em;
+  color: #e53bba;
+  margin-bottom: 10px;
 }
 
 .titulo-seccion p {
-    font-size: 1.2em;
-    color: #000000;
+  font-size: 1.2em;
+  color: #000000;
 }
 
 
@@ -50,7 +50,7 @@ body {
 .carousel-inner img {
   height: 80vh;
   object-fit: cover;
-  filter: brightness(70%); 
+  filter: brightness(70%);
 }
 
 .carousel-control-prev-icon,
@@ -61,7 +61,8 @@ body {
 /* --- BLOQUES --- */
 .bloques {
   display: flex;
-  flex-wrap: nowrap;   /* permite que se acomoden en varias filas */
+  flex-wrap: nowrap;
+  /* permite que se acomoden en varias filas */
   justify-content: center;
   gap: 20px;
   padding: 40px;
@@ -72,7 +73,7 @@ body {
   background: #1b1b1b;
   border-radius: 12px;
   padding: 20px;
-  width: 500px; 
+  width: 500px;
   text-align: center;
   box-shadow: 0 0 15px rgba(230, 0, 115, 0.2);
   transition: transform 0.3s, box-shadow 0.3s;
@@ -99,7 +100,8 @@ body {
   color: #fff;
   border-radius: 30px;
   text-decoration: none;
-  transition: all 0.3s; /*oara el cambio de color*/
+  transition: all 0.3s;
+  /*oara el cambio de color*/
   box-shadow: 0 0 10px #e60073;
 }
 
@@ -117,8 +119,8 @@ body {
 /*imagenes bloques*/
 .bloque img {
   width: 100%;
-  height: 180px; 
-  object-fit: cover; 
+  height: 180px;
+  object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
   box-shadow: 0 0 15px rgba(231, 4, 118, 0.4);
@@ -129,4 +131,3 @@ body {
   transform: scale(1.03);
   box-shadow: 0 0 25px rgba(230, 0, 115, 0.7);
 }
-
