--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,15 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Pinyon+Script&family=Unbounded:wght@200..900&display=swap');
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background: #D9D9D9;
+    font-family: Unbounded, Overpass, Montserrat;
     margin: 0;
     padding: 0;
+
+    color: #f5f5f5;
+    background: #4e5261;
+background: radial-gradient(circle,rgb(27, 29, 35) 0%, rgba(46, 42, 42, 1) 100%);
+    
+    
 }
 
 .busqueda {
     text-align: center;
     margin-bottom: 20px;
+}
+
+.busqueda h1{
+    color:  #e53bba;
+    
 }
 
 .busqueda input,
@@ -18,13 +28,25 @@ body {
     margin: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    background: #1a1a1a;
+    color: #fff;
+    transition: all 0.3s ease;
 }
+
+.busqueda input:focus,
+.busqueda select:focus {
+    outline: none;
+    border-color: #fff;
+    box-shadow: 0 0 10px #e53bba;
+}
+
+/*Calendario*/
 
 .calendario {
     width: 100%;
     max-width: 900px;
     margin: auto;
-    background: #fff;
+    background: #1e1e1e;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,10 +57,12 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+    
 }
 
 .calendario-header h2 {
     margin: 0;
+    
 }
 
 .dias {
@@ -47,6 +71,7 @@ body {
     text-align: center;
     font-weight: bold;
     margin-bottom: 10px;
+    color: #998e8e;
 }
 
 .fechas {
@@ -58,14 +83,20 @@ body {
 .fecha {
     padding: 15px;
     border-radius: 8px;
-    background: #f0f0f0;
+    background: #2a2a2a;
     min-height: 70px;
     position: relative;
+
+}
+
+.fecha:hover {
+    background: #3a3a3a;
+    box-shadow: 0 0 8px #e53bba;
 }
 
 .fecha.evento {
-    background: #cce5ff;
-    border: 1px solid #99cfff;
+    background: #311b2f;
+    box-shadow: 0 0 8px #e53bba;
 }
 
 .fecha span {
@@ -73,20 +104,23 @@ body {
     bottom: 5px;
     left: 5px;
     font-size: 0.8em;
-    color: #333;
+    color: #ccc;
+
 }
 
 .btn {
-    background: #007bff;
+    background: #e53bba;
     color: white;
     border: none;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .btn:hover {
-    background: #0056b3;
+    background: #f9f8f9;
+    color: #e53bba;
 }
 
 /* Celulares (pantallas pequeñas) */
