--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 body {
   background: #0d0d0d; 
   color: #f6f6f6;
-  font-family: Unbounded, Overpass, Montserrat;
+  font-family: Montserrat, Overpass, Montserrat;
   line-height: 1.6;
 }
 
